
syntax = "proto3";


import "commonmodule/IdentifiedObject.proto";
import "commonmodule/WYE.proto"; 
import "commonmodule/ENG_CalcMethodKind.proto";
import "commonmodule/MV.proto"; 
import "commonmodule/DEL.proto"; 
 

message ReadingMMXU {
  IdentifiedObject logicalNode = 2;
  WYE a = 4;
  ENG_CalcMethodKind clcMth = 6;
  MV hz = 8;
  WYE phV = 10;
  DEL pPV = 12;
  WYE vA = 13;
  WYE vAr = 14;
  WYE v = 15;  
}




